# node-native-benchmarks

./: .gitignore  Cargo.toml  README.md  justfile  package.json
_benchmark/: bench.js  benchmark.js  generate-cases.js  index.js  package.json
_benchmark/data/: generate-cases.js  index.js
_benchmark/lib/: benchmark.js  index.js
addon/: Cargo.toml
addon-c/: package.json
addon_c/: addon.cc  index.js  package.json
addon_napi/: Cargo.toml  index.js  package.json
addon_napi/src/: lib.rs
addon_neon/: Cargo.toml  package.json
addon_neon/src/: lib.rs
ffi-koffi/: Cargo.toml  index.js
ffi-napi/: Cargo.toml
ffi_koffi/: Cargo.toml  index.js  index.node  package.json
ffi_napi/: Cargo.toml  index.js  index.node  package.json
ffi_napi/src/: lib.rs
javascript/: index.js  package.json
wasm/: Cargo.toml  package.json
wasm/src/: lib.rs
