[package]
name = "addon_neon"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.neon]
version = "=1.1.0-alpha.0"
default-features = false
features = ["napi-8"]
